--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "alpha"
+version = "1.7-alpha"
 group = "com.nik7.upgcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "UpgradeCraft"
 
 minecraft {
-    version = "1.7.10-10.13.2.1236"
+    version = "1.7.10-10.13.2.1240"
     assetDir = "run/assets"
 }
 
