--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ archivesBaseName = "UpgradeCraft"
 
 minecraft {
     version = "1.7.10-10.13.2.1291"
-    assetDir = "run/assets"
+    runDir = "run/assets"
 }
 
 dependencies {
