--- a/build.gradle
+++ b/build.gradle
@@ -17,20 +17,13 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7-alpha"
-group = "com.nik7.upgcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "1.7.10-alpha"
+group= "com.nik7.upgcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "UpgradeCraft"
-
-sourceSets {
-    main {
-        java { srcDirs = ["$projectDir/src/java"] }
-        resources { srcDirs = ["$projectDir/src/resources"] }
-    }
-}
 
 minecraft {
     version = "1.7.10-10.13.2.1291"
-    runDir = "run/assets"
+    runDir = "run"
 }
 
 dependencies {
@@ -38,7 +31,7 @@ dependencies {
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
     //compile "some.group:artifact:version"
-
+      
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
@@ -50,21 +43,21 @@ dependencies {
 }
 
 processResources
-        {
-            // this will ensure that this task is redone when the versions change.
-            inputs.property "version", project.version
-            inputs.property "mcversion", project.minecraft.version
+{
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
 
-            // replace stuff in mcmod.info, nothing else
-            from(sourceSets.main.resources.srcDirs) {
-                include 'mcmod.info'
-
-                // replace version and mcversion
-                expand 'version': project.version, 'mcversion': project.minecraft.version
-            }
-
-            // copy everything else, thats not the mcmod.info
-            from(sourceSets.main.resources.srcDirs) {
-                exclude 'mcmod.info'
-            }
-        }
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+                
+        // replace version and mcversion
+        expand 'version':project.version, 'mcversion':project.minecraft.version
+    }
+        
+    // copy everything else, thats not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
+}
