--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group= "com.nik7.upgcraft" // http://maven.apache.org/guides/mini/guide-naming-c
 archivesBaseName = "UpgradeCraft"
 
 minecraft {
-    version = "1.7.10-10.13.3.1395-1710ls"
+    version = "1.7.10-10.13.3.1408-1.7.10"
     runDir = "run"
 }
 
