--- a/build.properties
+++ b/build.properties
@@ -2,3 +2,6 @@
 minecraft_version = 1.8.9
 forge_version = 11.15.1.1750
 mod_version = alpha-0.8
+
+jei_version = 2.15.1.71
+waila_version = 1.6.0-B3_1.8.8
