--- a/build.gradle
+++ b/build.gradle
@@ -11,26 +11,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-
-/*repositories {
-    maven { // the repo from which to get NEI and stuff
-        name 'CB Repo'
-        url "http://chickenbones.net/maven/"
-    }
-    maven { // The repo from which to get waila
-        name "Mobius Repo"
-        url "http://mobiusstrip.eu/maven"
-    }
-}
-dependencies {
-    compile('mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10') {
-        exclude group: 'mcp.mobius.waila'
-    }
-    compile "codechicken:CodeChickenLib:1.7.10-1.1.3.136:dev"
-    compile "codechicken:CodeChickenCore:1.7.10-1.0.6.43:dev"
-    compile "codechicken:NotEnoughItems:1.7.10-1.0.4.105:dev"
-}*/
-
+/*
 repositories {
 
     maven {
@@ -44,6 +25,7 @@ repositories {
         url "http://mobiusstrip.eu/maven"
     }
 }
+*/
 
 ext.configFile = file "build.properties"
 
@@ -62,9 +44,9 @@ minecraft {
     version = config.minecraft_version + "-" + config.forge_version
     runDir = "run"
 
-    useDepAts = true
+    //useDepAts = true
 
-    mappings = "stable_20"
+     mappings = "snapshot_20160312"
 
     replaceIn "reference/Reference.java"
     replace "@MOD_VERSION@", "${config.mod_version}"
@@ -73,8 +55,8 @@ minecraft {
 
 dependencies {
 
-    deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version
+    /*deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
+    deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version*/
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
