--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-/*
+
 repositories {
 
     maven {
@@ -20,12 +20,12 @@ repositories {
         url 'http://dvs1.progwml6.com/files/maven'
     }
 
-    maven { // The repo from which to get waila
+   /* maven { // The repo from which to get waila
         name "Mobius Repo"
         url "http://mobiusstrip.eu/maven"
-    }
+    }*/
 }
-*/
+
 
 ext.configFile = file "build.properties"
 
@@ -44,7 +44,7 @@ minecraft {
     version = config.minecraft_version + "-" + config.forge_version
     runDir = "run"
 
-    //useDepAts = true
+    useDepAts = true
 
      mappings = config.mappings
 
@@ -55,8 +55,8 @@ minecraft {
 
 dependencies {
 
-    /*deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version*/
+    deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
+    //deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
