--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ version = config.minecraft_version + "-" + config.mod_version
 group = "com.nik7.upgcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "UpgradeCraft"
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 minecraft {
     version = config.minecraft_version + "-" + config.forge_version
     runDir = "run"
