--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ repositories {
         url 'http://dvs1.progwml6.com/files/maven'
     }
 
-   /* maven { // The repo from which to get waila
+   maven { // The repo from which to get waila
         name "Mobius Repo"
         url "http://mobiusstrip.eu/maven"
-    }*/
+    }
 }
 
 
@@ -59,7 +59,7 @@ minecraft {
 dependencies {
 
     deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    //deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version
+    deobfCompile "mcp.mobius.waila:Waila:" + config.waila_version
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
