--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     // at runtime, use the full JEI jar
     runtime "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}"
 
-    deobfCompile "mcp.mobius.waila:Waila:${config.waila_version}"
+    //deobfCompile "mcp.mobius.waila:Waila:${config.waila_version}"
 
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
