--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ repositories {
 
     maven { // The repo from which to get waila
         name "Mobius Repo"
-        url "http://mobiusstrip.eu/maven"
+        //url "http://mobiusstrip.eu/maven"
+        url "http://tehnut.info/maven"
     }
 }
 
@@ -63,7 +64,7 @@ dependencies {
     // at runtime, use the full JEI jar
     runtime "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}"
 
-    //deobfCompile "mcp.mobius.waila:Waila:${config.waila_version}"
+    deobfCompile "mcp.mobius.waila:Hwyla:${config.waila_version}"
 
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
