--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,6 @@
-minecraft_version = 1.11
-forge_version = 13.19.1.2189
-mappings = snapshot_20161111
+minecraft_version=1.11.2
+forge_version=13.20.0.2201
+mappings=snapshot_20161220
 mod_version = alpha-0.1
-
-jei_version = 4.0.2.194
+jei_version=4.2.0.210
 waila_version = 1.8.5-B19_1.11
